--- a/index.html
+++ b/index.html
@@ -134,6 +134,28 @@
                 <div class="orbit-track">
                     <!-- Project 1 -->
                     <div class="project-node" style="--i:0">
+                        <a href="https://github.com/gabrielsmith1874/StreamBridge" target="_blank" class="project-card">
+                            <div class="node-icon"></div>
+                            <div class="card-content">
+                                <h3>StreamBridge</h3>
+                                <p>Android app to redirect Stremio streams to RokuTV.</p>
+                                <span class="tech-tag">Kotlin</span>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- Project 2 -->
+                    <div class="project-node" style="--i:1">
+                        <a href="https://github.com/gabrielsmith1874/StreamCast-Receiver" target="_blank" class="project-card">
+                            <div class="node-icon"></div>
+                            <div class="card-content">
+                                <h3>StreamCast Receiver</h3>
+                                <p>Roku receiver for StreamBridge streams.</p>
+                                <span class="tech-tag">BrightScript</span>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- Project 3 -->
+                    <div class="project-node" style="--i:2">
                         <a href="https://github.com/gabrielsmith1874" target="_blank" class="project-card">
                             <div class="node-icon"></div>
                             <div class="card-content">
@@ -143,8 +165,8 @@
                             </div>
                         </a>
                     </div>
-                    <!-- Project 2 -->
-                    <div class="project-node" style="--i:1">
+                    <!-- Project 4 -->
+                    <div class="project-node" style="--i:3">
                         <a href="https://github.com/gabrielsmith1874" target="_blank" class="project-card">
                             <div class="node-icon"></div>
                             <div class="card-content">
@@ -154,8 +176,8 @@
                             </div>
                         </a>
                     </div>
-                    <!-- Project 3 -->
-                    <div class="project-node" style="--i:2">
+                    <!-- Project 5 -->
+                    <div class="project-node" style="--i:4">
                         <a href="https://github.com/gabrielsmith1874" target="_blank" class="project-card">
                             <div class="node-icon"></div>
                             <div class="card-content">
@@ -165,8 +187,8 @@
                             </div>
                         </a>
                     </div>
-                    <!-- Project 4 -->
-                    <div class="project-node" style="--i:3">
+                    <!-- Project 6 -->
+                    <div class="project-node" style="--i:5">
                         <a href="https://github.com/gabrielsmith1874" target="_blank" class="project-card">
                             <div class="node-icon"></div>
                             <div class="card-content">
