Updated award text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <li>Managed workflows using Jira and DevOps practices.</li>
                                 <li>Designed and executed comprehensive test plans, including regression testing.</li>
                             </ul>
-                            <p class="award" style="color: #ffd700;"><strong>🏆 Award:</strong> Second runner up of the 2024 Product Team Award.</p>
+                            <p class="award" style="color: #ffd700;"><strong>Award:</strong> Second runner up of the Product Team Award.</p>
                         </div>
                     </div>
 
