--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="timeline">
                     
-                    <!-- Timeline Item 1 (New) -->
+                    <!-- Timeline Item 1 -->
                     <div class="timeline-item fade-in-up">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
@@ -80,7 +80,8 @@
                                 <li>Managed workflows using Jira and DevOps practices.</li>
                                 <li>Designed and executed comprehensive test plans, including regression testing.</li>
                             </ul>
-                            <p class="award" style="color: #ffd700;"><strong>Award:</strong> Second runner up of the Product Team Award.</p>
+                            <p class="award" style="color: #ffd700; margin-bottom: 0.5rem;"><strong>Award:</strong> Second runner up of the Product Team Award.</p>
+                            <p class="skills-tag" style="font-size: 0.85rem; color: #aaa;">Java, JSP, Jira, DevOps, Automation, Regression Testing</p>
                         </div>
                     </div>
 
@@ -88,20 +89,17 @@
                     <div class="timeline-item fade-in-up">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <span class="timeline-date">Sept 2022 - Present</span>
-                            <h3>Student @ UofT</h3>
-                            <p>Specializing in AI, Algorithms, and Data Structures. Designed complex algorithms (graphs, trees, flows) and created AI using Minimax, Backtracking, and A*. Built accessible Java projects with Google Cloud APIs.</p>
-                        </div>
-                    </div>
-
-                    <!-- Timeline Item 2 -->
-                    <div class="timeline-item fade-in-up">
-                        <div class="timeline-marker"></div>
-                        <div class="timeline-content">
-                            <span class="timeline-date">July 2024 - Present</span>
-                            <h3>Customer Service</h3>
+                            <span class="timeline-date">Jul 2024 - Present</span>
+                            <h3>Customer Service Representative</h3>
                             <h4 class="company">Farm Boy Inc.</h4>
-                            <p>Excelled in customer service and inventory management. Offered leadership roles quickly due to strong work ethic and delegation skills.</p>
+                            <p class="location" style="font-size: 0.9rem; opacity: 0.8; margin-bottom: 0.5rem;">Ontario, Canada · On-site</p>
+                            <ul style="margin-top: 0.5rem; padding-left: 1.2rem; margin-bottom: 0.8rem;">
+                                <li>Provide exceptional customer service, addressing customer inquiries and resolving issues promptly and courteously.</li>
+                                <li>Prepare a variety of fresh foods, ensuring adherence to quality and presentation standards.</li>
+                                <li>Maintain a clean and organized work area, following health and safety regulations.</li>
+                                <li>Assist with inventory management, including stocking supplies and monitoring product freshness.</li>
+                            </ul>
+                            <p class="skills-tag" style="font-size: 0.85rem; color: #aaa;">Food Safety, Customer Service, Inventory Management</p>
                         </div>
                     </div>
 
@@ -109,10 +107,46 @@
                     <div class="timeline-item fade-in-up">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <span class="timeline-date">Aug 2021 - Sept 2021</span>
+                            <span class="timeline-date">Sep 2023 - Jul 2024</span>
+                            <h3>HMR Clerk</h3>
+                            <h4 class="company">Loblaws Inc</h4>
+                            <p class="location" style="font-size: 0.9rem; opacity: 0.8; margin-bottom: 0.5rem;">Ontario, Canada · On-site</p>
+                            <p>As an HMR Clerk at Loblaws Supermarket, I excel in customer engagement, guiding patrons to select quality meal options. My role involves meticulous food preparation, ensuring adherence to safety standards. I effectively manage inventory, optimize stock levels and minimize waste.</p>
+                            <p class="skills-tag" style="font-size: 0.85rem; color: #aaa; margin-top: 0.5rem;">Food Safety, Cleaning, Customer Engagement, Inventory Control</p>
+                        </div>
+                    </div>
+
+                    <!-- Timeline Item 4 -->
+                    <div class="timeline-item fade-in-up">
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content">
+                            <span class="timeline-date">Aug 2021 - Sep 2021</span>
                             <h3>Assembler</h3>
-                            <h4 class="company">Dana Inc.</h4>
-                            <p>Assembled electronic components with zero defects. Maintained high quality standards and met production targets in a fast-paced environment.</p>
+                            <h4 class="company">Dana Incorporated</h4>
+                            <p class="location" style="font-size: 0.9rem; opacity: 0.8; margin-bottom: 0.5rem;">Oakville, Ontario, Canada · On-site</p>
+                            <ul style="margin-top: 0.5rem; padding-left: 1.2rem; margin-bottom: 0.8rem;">
+                                <li>Assembled mechanical and electronic components for automotive products, meeting daily production targets efficiently and achieving minimal production errors.</li>
+                                <li>Maintained high quality standards for products by conducting quality checks regularly, achieving a high accuracy rate with zero-defects</li>
+                            </ul>
+                            <p class="skills-tag" style="font-size: 0.85rem; color: #aaa;">Assembly, Quality Control, Cooperation, Machinery</p>
+                        </div>
+                    </div>
+
+                    <!-- Timeline Item 5 -->
+                    <div class="timeline-item fade-in-up">
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content">
+                            <span class="timeline-date">Jul 2021 - Aug 2021</span>
+                            <h3>Order Picker</h3>
+                            <h4 class="company">Wallace & Carey Inc.</h4>
+                            <p class="location" style="font-size: 0.9rem; opacity: 0.8; margin-bottom: 0.5rem;">Oakville, Ontario, Canada · On-site</p>
+                            <ul style="margin-top: 0.5rem; padding-left: 1.2rem; margin-bottom: 0.8rem;">
+                                <li>Executed daily order fulfillment duties utilizing a warehouse management system, picked and packed product and maintained high accuracy on order shipments.</li>
+                                <li>Assisted in the packaging of over hundreds of products per week</li>
+                                <li>Operated machinery such as pallet jacks, safely transporting materials around the warehouse</li>
+                                <li>Collaborated with team members to meet tight deadlines, consistently completing projects ahead of schedule.</li>
+                            </ul>
+                            <p class="skills-tag" style="font-size: 0.85rem; color: #aaa;">Warehouse Management Systems, Order Picking, Pallet Jack</p>
                         </div>
                     </div>
 
