Updated stroku project page

--- a/index.html
+++ b/index.html
@@ -168,28 +168,17 @@
                 <div class="orbit-track">
                     <!-- Project 1 -->
                     <div class="project-node" style="--i:0">
-                        <a href="https://github.com/gabrielsmith1874/StreamBridge" target="_blank" class="project-card">
+                        <a href="https://stroku.netlify.app/" target="_blank" class="project-card">
                             <div class="node-icon"></div>
                             <div class="card-content">
-                                <h3>StreamBridge</h3>
-                                <p>Android app to redirect Stremio streams to RokuTV.</p>
-                                <span class="tech-tag">Kotlin</span>
+                                <h3>Stroku</h3>
+                                <p>Receiver and sender for sending content to a Roku TV.</p>
+                                <span class="tech-tag">Web/Roku</span>
                             </div>
                         </a>
                     </div>
                     <!-- Project 2 -->
                     <div class="project-node" style="--i:1">
-                        <a href="https://github.com/gabrielsmith1874/StreamCast-Receiver" target="_blank" class="project-card">
-                            <div class="node-icon"></div>
-                            <div class="card-content">
-                                <h3>StreamCast Receiver</h3>
-                                <p>Roku receiver for StreamBridge streams.</p>
-                                <span class="tech-tag">BrightScript</span>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- Project 3 -->
-                    <div class="project-node" style="--i:2">
                         <a href="https://github.com/gabrielsmith1874" target="_blank" class="project-card">
                             <div class="node-icon"></div>
                             <div class="card-content">
@@ -199,8 +188,8 @@
                             </div>
                         </a>
                     </div>
-                    <!-- Project 4 -->
-                    <div class="project-node" style="--i:3">
+                    <!-- Project 3 -->
+                    <div class="project-node" style="--i:2">
                         <a href="https://github.com/gabrielsmith1874" target="_blank" class="project-card">
                             <div class="node-icon"></div>
                             <div class="card-content">
@@ -210,8 +199,8 @@
                             </div>
                         </a>
                     </div>
-                    <!-- Project 5 -->
-                    <div class="project-node" style="--i:4">
+                    <!-- Project 4 -->
+                    <div class="project-node" style="--i:3">
                         <a href="https://github.com/gabrielsmith1874" target="_blank" class="project-card">
                             <div class="node-icon"></div>
                             <div class="card-content">
@@ -221,8 +210,8 @@
                             </div>
                         </a>
                     </div>
-                    <!-- Project 6 -->
-                    <div class="project-node" style="--i:5">
+                    <!-- Project 5 -->
+                    <div class="project-node" style="--i:4">
                         <a href="https://github.com/gabrielsmith1874" target="_blank" class="project-card">
                             <div class="node-icon"></div>
                             <div class="card-content">
